src/objects/Survey__c.object
<CustomObject>
    <fields>
        <fullName>Alias__c</fullName>
        <description>This is the alias of the Survey</description>
        <label>Alias</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AllowAnonymousInterviewee__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicate if the Interviewee field can be left blank on the submission (reply anonymously)</description>
        <label>Allow Anonymous Interviewee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Close_Message__c</fullName>
        <label>Message After Submission</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CountryCode__c</fullName>
        <description>The ISO 3166-1 alpha-2 country code</description>
        <label>Country Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deployment__c</fullName>
        <label>Deployment</label>
        <picklist>
            <picklistValues>
                <fullName>Smartphone</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Gps_Location_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GPS Capture</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gps_ShowMap__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GPS Show Map</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InterviewMapField__c</fullName>
        <description>Indicates which field maps with the interviewee field of the survey</description>
        <label>Interviewee Map Field</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsCloned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCloned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsPPI__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the survey is a PPI Survey</description>
        <label>Is PPI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsTemplate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this survey is actually a template. If this is checked then this survey cannot be distributed on its own. It must be included into another survey</description>
        <label>Is Template</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LanguageCode__c</fullName>
        <defaultValue>&apos;EN&apos;</defaultValue>
        <label>Language Code</label>
        <length>3</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PPIDataYear__c</fullName>
        <description>Data year for the PPI survey</description>
        <label>Data Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ParentTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The template that this survey was created from</description>
        <label>Parent Template</label>
        <referenceTo>Survey__c</referenceTo>
        <relationshipLabel>ParentTemplate</relationshipLabel>
        <relationshipName>ParentTemplate</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>16</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>PpiIdentifier__c</fullName>
        <label>PPI Identifier</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PublishedDate__c</fullName>
        <label>Published Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QuestionCount__c</fullName>
        <label>Question Count</label>
        <summaryFilterItems>
            <field>Question__c.Type__c</field>
            <operation>notEqual</operation>
            <value>Section, Repeat</value>
        </summaryFilterItems>
        <summaryForeignKey>Question__c.Survey__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RemoteCreatorName__c</fullName>
        <description>The name of the person who created the original survey on the remote org</description>
        <label>Remote Creator Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RemoteId__c</fullName>
        <description>The Id of Survey as it is in the org that the survey was downloaded from</description>
        <externalId>true</externalId>
        <label>Remote Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RemoteOrganisation__c</fullName>
        <description>The name of the remote organisation that created the survey</description>
        <label>Remote Organisation</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResponseCount__c</fullName>
        <label>Response Count</label>
        <summaryFilterItems>
            <field>Submission__c.Status__c</field>
            <operation>equals</operation>
            <value>Uploaded, Uploaded - Processed after Survey Automatically Closed</value>
        </summaryFilterItems>
        <summaryForeignKey>Submission__c.Survey__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Saving_XForm__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used only when saving an XForm to avoid the deletion of the XForm in the CleanXForm trigger</description>
        <label>Saving XForm</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StatusImage__c</fullName>
        <formula>IMAGE(
CASE( Status__c ,
&quot;Draft&quot;,&quot;/resource/IconPackage/actions/document-edit.png&quot;,
&quot;Published&quot;, &quot;/resource/IconPackage/actions/arrow-right-3.png&quot;,
&quot;Closed&quot;,&quot;/resource/IconPackage/actions/dialog-cancel-5.png&quot;,
&quot;&quot;),
&quot;Status&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>StatusImage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Published</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SurveyLibrary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The survey library that the survey was downloaded from. Allows easy update</description>
        <label>Survey Library</label>
        <referenceTo>SurveyLibrary__c</referenceTo>
        <relationshipLabel>Surveys</relationshipLabel>
        <relationshipName>Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TotalSubmissions__c</fullName>
        <label>Total Submissions</label>
        <summaryForeignKey>Submission__c.Survey__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalTargets__c</fullName>
        <description>A sum of all the group targets assigned to this survey</description>
        <label>Total Targets</label>
        <summarizedField>ContactGroupSurveyAssignment__c.Target__c</summarizedField>
        <summaryForeignKey>ContactGroupSurveyAssignment__c.Survey__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>XForm_Status__c</fullName>
        <description>XForm status indicates if the version has an xform and if it has customizations</description>
        <label>XForm Status</label>
        <picklist>
            <picklistValues>
                <fullName>NONE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEFAULT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CUSTOM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Survey</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01Id0000001IO6lEAG_00Nd0000006ayoOEAQ</fullName>
        <active>true</active>
        <field>ContactGroupSurveyAssignment__c.Survey__c</field>
        <filterItems>
            <field>Survey__c.IsTemplate__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <infoMessage>Show only non template and non ppi  surveys</infoMessage>
        <isOptional>false</isOptional>
        <name>Assigned Survey_Survey</name>
    </namedFilters>
    <pluralLabel>Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>AllowAnonymousInterviewee_Must_Be_False</fullName>
        <active>true</active>
        <description>AllowAnonymousInterviewee__c must be set to false</description>
        <errorConditionFormula>AllowAnonymousInterviewee__c</errorConditionFormula>
        <errorDisplayField>AllowAnonymousInterviewee__c</errorDisplayField>
        <errorMessage>AllowAnonymousInterviewee__c must be set to false</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Country_Code_Should_Have_A_Match</fullName>
        <active>true</active>
        <description>Validate that the country code have a match in the country list</description>
        <errorConditionFormula>IsPPI__c &amp;&amp;
VLOOKUP( $ObjectType.ISO_Country__c.Fields.Name,
    $ObjectType.ISO_Country__c.Fields.Name,
    CountryCode__c ) = &apos;&apos;</errorConditionFormula>
        <errorDisplayField>CountryCode__c</errorDisplayField>
        <errorMessage>The selected country code is not valid. This should be an ISO 3166-1 alpha-2 country code.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>InterviewMapField_Must_Be_Null</fullName>
        <active>true</active>
        <description>InterviewMapField__c must be null as it is no longer used</description>
        <errorConditionFormula>NOT(ISBLANK(InterviewMapField__c ))</errorConditionFormula>
        <errorDisplayField>InterviewMapField__c</errorDisplayField>
        <errorMessage>Please leave the InterviewMapField__c blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>UniqueName</fullName>
        <active>true</active>
        <description>Validate the name uniqueness.</description>
        <errorConditionFormula>Name = VLOOKUP( $ObjectType.Survey__c.Fields.Name,
                                 $ObjectType.Survey__c.Fields.Name,
                                 Name )
&amp;&amp; Id &lt;&gt; VLOOKUP( $ObjectType.Survey__c.Fields.Id,
                                  $ObjectType.Survey__c.Fields.Name,
                                  Name )</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>The name of the survey must be unique</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>YearFormat</fullName>
        <active>true</active>
        <description>Validates that the year should be an integer greater than 1900</description>
        <errorConditionFormula>PPIDataYear__c &lt; 1900</errorConditionFormula>
        <errorDisplayField>PPIDataYear__c</errorDisplayField>
        <errorMessage>The year should be greater than 1900</errorMessage>
    </validationRules>
</CustomObject>